<resources>
    <string name="app_name">Qrky</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="geoloc_permission_q">Track Location?</string>

    <string name="confirm_track_location_title">Track Location?</string>
    <string name="confirm_track_location_confirm">Yes, let\'s track it!</string>
    <string name="confirm_track_location_cancel">No, don\'t track it.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="username1"> %s</string>
    <string name="rank">%1$d</string>
    <string name="cards_collected">%1$d</string>
    <string name="total_points">%1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="beautiful_profile_image">Beautiful profile image</string>
    <string name="edit_profile_button">edit profile button</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_stuff">username: \nemail: \npassword: ●●●●●●●●●●●</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="save_changes">Save Changes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>