<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ProfileEditActivity"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro_medium"
        android:text="Edit Profile"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002"> </TextView>

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/input_field"
        android:fontFamily="@font/advent_pro_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:selectAllOnFocus="true"

        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title"
        app:layout_constraintVertical_bias="0.06999999" />

    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_email"
        android:background="@drawable/input_field"
        android:fontFamily="@font/advent_pro_medium"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:selectAllOnFocus="true"

        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.06999999" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/input_field"
        android:fontFamily="@font/advent_pro_medium"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:padding="10dp"
        android:selectAllOnFocus="true"
        android:textColor="@color/black"
        android:textFontWeight="600"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.07999998" />


    <Button
        android:id="@+id/backBttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/purple_200"
        android:padding="10dp"
        android:text="Back"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/page_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_background"
        android:enabled="true"
        android:fontFamily="@font/advent_pro_medium"
        android:padding="10dp"
        android:text="@string/save_changes"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintVertical_bias="0.9" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/confirm_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>